#259 Retry database connection every x seconds (default 60) if it failed at startup. Some refactoring.